<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/covid_home"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fff">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="140dp"
            android:src="@drawable/hospital"
            android:layout_gravity="center"
            />


    </LinearLayout>


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:textColor="#fff"
        android:text="Covid-19 Hospital" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10sp"
        android:textColor="#fff"
        android:text="@string/address" />

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_patient"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/buttons_background"
        />
    <Button
        android:id="@+id/doctorLoginBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_login"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/buttons_background"
        />

    <Button
        android:id="@+id/adminLoginBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_login"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/buttons_background"
        />


    <Button
        android:id="@+id/pathologistLoginBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pathologist_login"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/buttons_background"
        />

</androidx.appcompat.widget.LinearLayoutCompat>